# taskflow

./: README.md  flotilla.yaml  pyproject.toml
hopewell/: __init__.py  backfill.py  backfill_cli.py  backfill_git.py  backfill_issues.py  backfill_speckit.py  backfill_todo.py  claim.py  claude_hooks.py  cli.py  comment.py  comment_cli.py  config.py  cycle_time.py  cycle_time_cli.py  events.py  executor.py  extensions.py  flow.py  flow_cli.py  flow_trace.py  flow_trace_cli.py  gates.py  github.py  hook_templates.py  hooks.py  markov.py  markov_cli.py  merge_driver.py  meta.py  model.py  network.py  network_cli.py  orchestrator.py  project.py  query.py  reconciliation.py  reconciliation_cli.py  release.py  release_cli.py  (+5 more)
hopewell/render/: views.py
hopewell/web/: __init__.py  server.py
hopewell/web/static/: app.js  canvas.js  index.html  style.css  viewer.js
taskflow/: __init__.py  __main__.py  attestation.py  backfill.py  backfill_cli.py  backfill_git.py  backfill_issues.py  backfill_speckit.py  backfill_todo.py  claim.py  claude_hooks.py  claude_hooks_cli.py  cli.py  comment.py  comment_cli.py  config.py  cycle_time.py  cycle_time_cli.py  evolve.py  executor_components.py  extensions.py  flow.py  flow_cli.py  flow_trace.py  flow_trace_cli.py  gates.py  github.py  hook_templates.py  hooks.py  markov.py  markov_cli.py  merge_driver.py  meta.py  migrate.py  model.py  network.py  network_cli.py  network_defaults.py  orchestrator.py  paths.py  (+13 more)
taskflow/docs/: claude-code-hooks.md
taskflow/render/: __init__.py  views.py
taskflow/web/: __init__.py  server.py
taskflow/web/static/: canvas.js  style.css  viewer.js
